--- a/index.html
+++ b/index.html
@@ -1,42 +1,1 @@
-<!doctype html> <html> <head> <meta charset="utf-8"> <title>My Fantasy Team</title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/main.css"> <script src="scripts/vendor.js"></script> </head> <body ng-app="myFantasyTeamApp"> <main ng-controller="MainCtrl"> <ng-include src="'views/header.html'"></ng-include> <div class="container"> <div ng-view=""></div> </div> <div class="footer"> <div class="container"> <br> <p align="center">we <span class="glyphicon glyphicon-heart"></span> football</p> </div> </div> <script type="text/ng-template" id="playerDetails.html"><div class="modal-header">
-            <h3 class="modal-title">{{player.name}}</h3>
-        </div>
-        <div class="modal-body player-modal">
-            <span class="image"><img ng-src="images/players/{{player.id}}.png" err-src="images/player.png" /></span><span class="overview">
-                <table>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <h5>Percent Owned</h5>
-                                <h3>{{info.percentOwned}}%</h3>
-                            </td>
-                            <td>
-                                <h5>Percent Changed</h5>
-                                <h3>{{info.percentOwnedChange}}%</h3>
-                            </td>
-                            <td>
-                                <h5>Adds</h5>
-                                <h3>{{info.numAdds}}</h3>
-                            </td>
-                            <td>
-                                <h5>Drops</h5>
-                                <h3>{{info.numDrops}}</h3>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </span>
-            <span class="stats">
-                <table class="table table-striped table-hover">
-                    <tbody>
-                        <tr class="player-row" ng-repeat="stat in stats">
-                            <td class="week">Week {{stat.week}}</td>
-                            <td class="week-points">{{stat.week_points || '--'}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </span>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="closePlayerDetails()">Close</button>
-        </div></script> </main> <script src="scripts/scripts.js"></script> </body> </html>
+<!doctype html> <html> <head> <meta charset="utf-8"> <title>My Fantasy Team</title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/main.css"> <script src="scripts/vendor.js"></script> </head> <body ng-app="myFantasyTeamApp"> <main ng-controller="MainCtrl"> <ng-include src="'views/header.html'"></ng-include> <div class="container"> <div ng-view=""></div> </div> <div class="footer"> <div class="container"> <br> <p align="center">we <span class="glyphicon glyphicon-heart"></span> football</p> </div> </div> </main> <script src="scripts/scripts.js"></script> </body> </html>
