--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <li><a class="padding-right-lg waves-effect" ng-click="closeNav()" ng-href="#/friends">Friends</a></li>
               <li><a class="padding-right-lg waves-effect" ng-click="closeNav()" ng-href="#/players">Research</a></li>
               <li><a class="padding-right-lg waves-effect" ng-click="closeNav()" ng-href="#/users">Users</a></li>
-            </ul> --> </li> </ul> <a class="header-logo margin-no hidden-md hidden-lg" href="#/">FantasyZone</a> <ul class="nav nav-list pull-right padding-right-sm"> <li> <a ng-href="#/friends"><span class="icon icon-2x icon-disabled">group</span></a><span class="label label-red" ng-cloak ng-if="friends.length > 0">1</span></li> <a ng-href="#/challenges"><span class="icon icon-2x">notifications</span></a><span class="label label-red">1</span> </ul> <!-- <ul class="nav nav-list hidden-xx hidden-xs">
+            </ul> --> </li> </ul> <a class="header-logo margin-no hidden-md hidden-lg" href="#/">FantasyZone</a> <ul class="nav nav-list pull-right padding-right-sm"> <li><a ng-href="#/friends"> <span class="icon icon-2x icon-disabled">group</span> <span class="label label-red" ng-cloak ng-if="friends.length > 0">1</span> </a></li> <a ng-href="#/challenges"> <span class="icon icon-2x">notifications</span> <span class="label label-red">1</span> </a> </ul> <!-- <ul class="nav nav-list hidden-xx hidden-xs">
           <li><a class="waves-effect waves-light" ng-href="#/">Home</a></li>
           <li><a class="waves-effect waves-light" ng-href="#/challenges">Challenges</a></li>
           <li><a class="waves-effect waves-light" ng-href="#/practice">Practice</a></li>
